Update to more sensible int to Integer conversion
git-svn-id: https://svn.apache.org/repos/asf/jakarta/bsf/trunk@757236 13f79535-47bb-0310-9956-ffa450edef68